# clicli

./: .gitignore  .isort.cfg  Makefile  README.md  clicli.py  pyproject.toml  setup.cfg
commands/: ns.py
utils/: echo.py
