[tool.poetry]
name = "CliCli"
version = "0.1.0"
description = "Tool to view envs"
authors = ["Marc Jou <smyslov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kubernetes = "^12.0.1"
httpx = "^0.16.1"
click = "^7.1.2"
semver = "^2.13.0"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
